# obj-loader

./: .gitignore  CMakeLists.txt  loader.cpp
include/: loader.h
